   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.51
 ============

 Released on 

 New features and improvements:

   - Recurrent: new plugin (todo #213).

 Bug fixes:

   - ofaAccountProperties: force indicators to FALSE if root account.

 Other changes:

   - my_idialog_run_maybe_modal(): new method.
   - ofaAccountFrameBin: moved to core/.
   - ofaAccountProperties: moved to core/.
   - ofaAccountSelect: moved to core/.
   - ofaAccountStore: moved to core/.
   - ofaCurrencyCombo: moved to core/.
   - ofaCurrencyStore: moved to core/.
   - ofaGuidedInputBin: moved to core/.
   - ofaIEntryOpeTemplate: new interface.
   - ofaLedgerCombo: moved to core/.
   - ofaLedgerStore: moved to core/.
   - ofaLedgerCombo: moved to core/.
   - ofaOpeTemplateFrameBin: moved to core/.
   - ofaOpeTemplateHelp: moved to core/.
   - ofaOpeTemplateProperties: moved to core/.
   - ofaOpeTemplateSelect: moved to core/.
   - ofaOpeTemplateStore: moved to core/.
   - ofa_idbconnect_has_table(): new method.

-----------------------------------------------------------------------
 Version 0.50
 ============

 Released on 2016-03-13

 New features and improvements:

   - Have a new icon for account selection (todo #1034).
   - DBModel v28: increase all identifiers and labels size (todo #969). 
   - ofaReconciliation: asssociates an account to the used BAT files (todo #751).
   - ofaReconciliation: manage BAT vs. Account selection (todo #752).
   - ofaReconciliationRender: prints unconciliated bank transactions (todo #985).
   - ofaReconciliationRender: change the bottom summary font (todo #1001).
   - ofaReconciliationRender: add the rendering date to the title (todo #1002).
   - ofaReconciliationRender: compare bank and account soldes (todo #1004).
