@@ -16,7 +16,9 @@ src/core/ofa-preferences.ui
 src/mysql/ofa-mysql-editor-display.ui
 src/mysql/ofa-mysql-editor-enter.ui
 src/mysql/ofa-mysql-prefs-bin.ui
+src/recurrent/ofa-recurrent-manage-page.ui
 src/recurrent/ofa-recurrent-model-properties.ui
+src/recurrent/ofa-recurrent-new.ui
 src/recurrent/ofa-recurrent-run-page.ui
 src/tva/ofa-tva-form-properties.ui
 src/tva/ofa-tva-record-new.ui
