@@ -38,6 +38,7 @@
 #include "api/ofa-icollectionable.h"
 #include "api/ofa-icollector.h"
 #include "api/ofa-idbconnect.h"
+#include "api/ofa-idbmodel.h"
 #include "api/ofa-iexportable.h"
 #include "api/ofa-iimportable.h"
 #include "api/ofo-base.h"
@@ -1020,7 +1021,7 @@ ofo_ledger_is_deletable( const ofoLedger *ledger )
 {
 	ofaHub *hub;
 	ofoDossier *dossier;
-	gboolean ok;
+	gboolean deletable;
 	const gchar *mnemo;
 
 	g_return_val_if_fail( ledger && OFO_IS_LEDGER( ledger ), FALSE );
@@ -1030,11 +1031,13 @@ ofo_ledger_is_deletable( const ofoLedger *ledger )
 	dossier = ofa_hub_get_dossier( hub );
 	mnemo = ofo_ledger_get_mnemo( ledger );
 
-	ok = !ofo_dossier_use_ledger( dossier, mnemo ) &&
+	deletable = !ofo_dossier_use_ledger( dossier, mnemo ) &&
 			!ofo_entry_use_ledger( hub, mnemo ) &&
 			!ofo_ope_template_use_ledger( hub, mnemo );
 
-	return( ok );
+	deletable &= ofa_idbmodel_get_is_deletable( hub, OFO_BASE( ledger ));
+
+	return( deletable );
 }
 
 /**
