@@ -436,19 +436,32 @@ form_find_by_mnemo( GList *set, const gchar *mnemo )
 }
 
 /**
- * ofo_tva_form_use_account:
- * @hub:
- * @account:
+ * ofo_tva_form_get_is_deletable:
+ * @hub: the current #ofaHub object of the application.
+ * @object: the object to be tested.
  *
- * Returns: %TRUE if a recorded entry makes use of the specified currency.
+ * Returns: %TRUE if the @object is not used by ofoTVAForm, thus may be
+ * deleted.
  */
 gboolean
-ofo_tva_form_use_account( ofaHub *hub, const gchar *account )
+ofo_tva_form_get_is_deletable( const ofaHub *hub, const ofoBase *object )
 {
-	g_return_val_if_fail( hub && OFA_IS_HUB( hub ), FALSE );
-	g_return_val_if_fail( my_strlen( account ), FALSE );
+	gboolean ok;
+	const gchar *account_id;
+	guint count;
 
-	return( form_count_for_account( ofa_hub_get_connect( hub ), account ) > 0 );
+	g_return_val_if_fail( hub && OFA_IS_HUB( hub ), FALSE );
+	g_return_val_if_fail( object && OFO_IS_BASE( object ), FALSE );
+
+	ok = TRUE;
+
+	if( OFO_IS_ACCOUNT( object )){
+		account_id = ofo_account_get_number( OFO_ACCOUNT( object ));
+		count = form_count_for_account( ofa_hub_get_connect( hub ), account_id );
+		ok = ( count == 0 );
+	}
+
+	return( ok );
 }
 
 static guint
@@ -458,7 +471,8 @@ form_count_for_account( const ofaIDBConnect *connect, const gchar *account )
 	gchar *query;
 
 	query = g_strdup_printf(
-				"SELECT COUNT(*) FROM TVA_T_FORMS_DET WHERE TFO_DET_AMOUNT LIKE '%%%s%%'", account );
+				"SELECT COUNT(*) FROM TVA_T_FORMS_DET "
+				"	WHERE TFO_DET_BASE LIKE '%%%s%%' OR WHERE TFO_DET_AMOUNT LIKE '%%%s%%'", account, account );
 
 	ofa_idbconnect_query_int( connect, query, &count, TRUE );
 
